:bug: fix layout bugs

--- a/frontend/src/styles/common/_layout.css
+++ b/frontend/src/styles/common/_layout.css
@@ -15,11 +15,19 @@
 }
 
 .three-column-layout {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  column-gap: 1rem;
-  position: relative;
-  align-items: start;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.three-column-layout > section:nth-child(2) {
+  flex-basis: 47.5%;
+}
+
+.three-column-layout__left-column,
+.three-column-layout__right-column {
+  flex-basis: 25%;
 }
 
 .three-column-layout__left-column {
@@ -32,7 +40,8 @@
 .three-column-layout__left-column > section,
 .three-column-layout__left-column > aside {
   position: fixed;
-  width: 37rem;
+  width: 20%;
+  max-width: 40rem;
 }
 
 .three-column-layout__right-column {
@@ -40,33 +49,40 @@
   top: 0;
 }
 
+@media screen and (max-width: 1600px) {
+  .three-column-layout__left-column > div,
+  .three-column-layout__left-column > section,
+  .three-column-layout__left-column > aside {
+    width: 24%;
+  }
+
+  .three-column-layout > section:nth-child(2) {
+    flex-basis: 48%;
+  }
+}
+
 @media screen and (max-width: 1300px) {
-  .three-column-layout {
-    grid-template-columns: 1fr 2fr 0;
+  .three-column-layout__left-column > div,
+  .three-column-layout__left-column > section,
+  .three-column-layout__left-column > aside {
+    width: 30%;
+  }
+
+  .three-column-layout > section:nth-child(2) {
+    flex-basis: 67.5%;
   }
 
   .three-column-layout__right-column {
     display: none;
   }
-
-  .three-column-layout__condense {
-    grid-template-columns: 0fr 2fr 1fr;
-  }
 }
 
-@media screen and (max-width: 1000px) {
-  .three-column-layout {
-    grid-template-columns: 1fr;
-  }
-
+@media screen and (max-width: 1080px) {
   .three-column-layout__left-column {
     display: none;
   }
-}
 
-@media screen and (max-width: 1000px) {
-  .three-column-layout__condense {
-    display: flex;
-    flex-direction: column-reverse;
+  .three-column-layout > section:nth-child(2) {
+    flex-basis: 100%;
   }
 }
